objects/EUR_CRM_Outlet_Type__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Affiliate__c</fullName>
        <formula>EUR_CRM_Group_Outlet_Type__r.EUR_CRM_Affiliate__r.Name</formula>
        <label>Affiliate Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <description>For the following affiliates:
1. SFA Lite</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Group_Outlet_Type__r.EUR_CRM_Group_Outlet_Name__c)</formula>
        <label>Group Outlet Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type__c</fullName>
        <label>Group Outlet Type</label>
        <referenceTo>EUR_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipName>EUR_PROS_Outlet_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name__c</fullName>
        <label>Outlet Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outlet Type (EU)</label>
    <listViews>
        <fullName>All_DK_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Outlet_Type__c.EUR_DK_Outlet_Type</value>
        </filters>
        <label>All DK Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_FI_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Outlet_Type__c.EUR_FI_Outlet_Type</value>
        </filters>
        <label>All FI Outlet Types</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_PT_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Outlet_Type__c.EUR_PT_Outlet_Type</value>
        </filters>
        <label>All PT Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Outlet_Type_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Outlet_Type__c.EUR_BG_Outlet_Type</value>
        </filters>
        <label>EUR BG All Outlet Type View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_CH_All_Outlet_Type</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Outlet_Type__c.EUR_CH_Outlet_Type</value>
        </filters>
        <label>All CH Outlet Type</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_MA_All_Outlet_Type</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Outlet_Type__c.EUR_MA_Outlet_Type</value>
        </filters>
        <label>All MA Outlet Type</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRH_PR_EMEA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Outlet_Type</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Outlet_Type__c.EUR_RU_Outlet_Type</value>
        </filters>
        <label>All RU Outlet Type</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Outlet_Type</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Group_Outlet_Type_Name__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Outlet_Type__c.EUR_ZA_Outlet_Type</value>
        </filters>
        <label>All ZA Outlet Type</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>Outlet Type No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlet Type (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Outlet_Type</fullName>
        <active>true</active>
        <description>Angola</description>
        <label>EUR AO Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR AT Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR BG Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR CH Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR DE Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Outlet_Type</fullName>
        <active>true</active>
        <description>Record Type for DK Outlets</description>
        <label>EUR DK Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Outlet_Type</fullName>
        <active>true</active>
        <description>Estonia</description>
        <label>EUR EE Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR FI Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Outlet_Type</fullName>
        <active>true</active>
        <description>Great Britain</description>
        <label>EUR GB Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Outlet_Type</fullName>
        <active>true</active>
        <description>Kenya</description>
        <label>EUR KE Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Outlet_Type</fullName>
        <active>true</active>
        <description>Lithuania</description>
        <label>EUR LT Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Outlet_Type</fullName>
        <active>true</active>
        <description>Latvia</description>
        <label>EUR LV Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR MA Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR NG Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_OutletType</fullName>
        <active>true</active>
        <label>EUR_PRT_OutletType</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR PT Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Outlet_Type</fullName>
        <active>true</active>
        <description>RU Outlet Type</description>
        <label>EUR RU Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Outlet_Type</fullName>
        <active>true</active>
        <description>South Africa</description>
        <label>EUR ZA Outlet Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>